Fix arrow button alignment

--- a/assets/blocks/course-outline/outline-block/outline.scss
+++ b/assets/blocks/course-outline/outline-block/outline.scss
@@ -1,6 +1,6 @@
 .wp-block-sensei-lms-course-outline {
 	&__arrow[type='button'] {
-		display: block;
+		display: flex;
 		padding: 0;
 		background: none;
 		border: 0;
